# CEIM-EcoDeviceScore

./: CMakeLists.txt
examples/: ceim_ecodevice_score_example.cpp
include/: ceim_ecodevice_score.hpp
